force-app/main/default/objects/Volunteer_Checklist__c/Volunteer_Checklist__c.object-meta.xml
<CustomObject>
    <description>Used for tracking completion of checklist items (Code of conduct, success profile signed etc)</description>
    <label>Volunteer Checklist</label>
    <nameField>
        <displayFormat>VCH - {0000}</displayFormat>
        <label>Volunteer Checklist Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>