force-app/main/default/objects/Volunteer_Checklist__c/fields/eSignature_Link__c.field-meta.xml
<CustomField>
    <fullName>eSignature_Link__c</fullName>
    <label>eSignature Link</label>
    <type>Url</type>
</CustomField>