force-app/main/default/objects/Volunteer_Checklist__c/fields/volcheckid__c.field-meta.xml
<CustomField>
    <fullName>volcheckid__c</fullName>
    <externalId>true</externalId>
    <label>volcheckid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>