force-app/main/default/objects/Volunteer_Checklist__c/fields/Volunteer_Check_List__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Check_List__c</fullName>
    <label>Volunteer Check List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code of Conduct 2021</fullName>
                <label>Code of Conduct</label>
            </value>
            <value>
                <fullName>Commitment to Safeguarding Children</fullName>
            </value>
            <value>
                <fullName>Safeguarding Children and Young People Policy</fullName>
            </value>
            <value>
                <fullName>Responding to Suspected Child Abuse Policy</fullName>
            </value>
            <value>
                <fullName>Volunteer References</fullName>
            </value>
            <value>
                <fullName>Volunteer Interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>